--- a/start.html
+++ b/start.html
@@ -8,9 +8,14 @@
 </head>
     <h1> This is my five start.html</h1>
     <p> Bangladesh</p>
+    <h4>New Love</h4>
     <img src="pexels-pixabay-65894.jpg" alt="">
     <img src="pexels-pixabay-60597.jpg" alt="">
+
+    <h3> new blog</h3>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis minima fugit voluptates quae deserunt, voluptatum cupiditate beatae voluptate ea expedita animi doloribus velit labore ex ut numquam cumque inventore? Itaque voluptates reprehenderit pariatur sed ducimus, beatae ratione sint aut veniam?</p>
 <body>
     
 </body>
-</html>
+</html> 
