--- a/start.html
+++ b/start.html
@@ -12,7 +12,7 @@
     <img src="pexels-pixabay-65894.jpg" alt="">
     <img src="pexels-pixabay-60597.jpg" alt="">
 
-    <h3> new blog</h3>
+    <h3> new blog. new blon2</h3>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis minima fugit voluptates quae deserunt, voluptatum cupiditate beatae voluptate ea expedita animi doloribus velit labore ex ut numquam cumque inventore? Itaque voluptates reprehenderit pariatur sed ducimus, beatae ratione sint aut veniam?</p>
 <body>
